[package]
name = "Sahne Dünya Packet Liders"
version = "0.0.1"
authors = ["Belli değil"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
zip = "0.6"
clap = "2.33"
thiserror = "1.0"
disk-cache = "0.1"
log = "0.4"
env_logger = "0.9"
crossterm = "0.27"
toml = "0.5" # toml kütüphanesi
md5 = "0.7" # md5 kütüphanesi
regex = "1" # regex kütüphanesi
fs2 = "0.4" # fs2 kütüphanesi
